--- a/deno.json
+++ b/deno.json
@@ -12,7 +12,7 @@
       "tags": ["fresh", "recommended"]
     }
   },
-  "exclude": ["**/_fresh/*"],
+  "exclude": ["**/_fresh/*", "node_modules/**/*"],
   "imports": {
     "@/": "./",
     "daisyui": "npm:daisyui@^5.5.5",
@@ -29,6 +29,7 @@
     "lib": ["dom", "dom.asynciterable", "dom.iterable", "deno.ns"],
     "jsx": "precompile",
     "jsxImportSource": "preact",
+    "skipLibCheck": true,
     "jsxPrecompileSkipElements": [
       "a",
       "img",
