--- a/deno.json
+++ b/deno.json
@@ -9,7 +9,8 @@
   },
   "lint": {
     "rules": {
-      "tags": ["fresh", "recommended"]
+      "tags": ["fresh", "recommended"],
+      "exclude": ["react-no-danger"]
     }
   },
   "exclude": ["**/_fresh/*", "node_modules/**/*"],
